[gd_scene load_steps=4 format=3 uid="uid://taxi001"]

[ext_resource type="Script" path="res://scripts/entities/taxi.gd" id="1_taxi"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_thrust"]
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, 1, 0)
spread = 30.0
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 5.0
color = Color(1, 0.8, 0.2, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_taxi"]
radius = 15.0

[node name="Taxi" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 30
script = ExtResource("1_taxi")

[node name="BodySprite" type="Polygon2D" parent="."]

[node name="WindowSprite" type="Polygon2D" parent="."]

[node name="LeftWheel" type="Polygon2D" parent="."]

[node name="RightWheel" type="Polygon2D" parent="."]

[node name="ThrustParticles" type="GPUParticles2D" parent="."]
position = Vector2(0, 12)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_thrust")
lifetime = 0.3
one_shot = false
explosiveness = 0.0

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_taxi")
